--- a/tensor_tutorial.ipynb
+++ b/tensor_tutorial.ipynb
@@ -90,11 +90,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1.8361e+25, 1.4603e-19, 1.6795e+08],\n",
-      "        [4.7423e+30, 4.7393e+30, 9.5461e-01],\n",
-      "        [4.4377e+27, 1.7975e+19, 4.6894e+27],\n",
-      "        [7.9463e+08, 3.2604e-12, 1.7743e+28],\n",
-      "        [2.0535e-19, 5.9682e-02, 7.0374e+22]])\n"
+      "tensor([[1.0811e-17, 4.5572e-41, 1.0811e-17],\n",
+      "        [4.5572e-41, 1.8966e+28, 1.7446e+22],\n",
+      "        [1.1722e-19, 1.2686e+31, 2.0362e-19],\n",
+      "        [7.5555e+31, 5.0778e+31, 1.2708e+31],\n",
+      "        [2.0362e-19, 4.9569e+33, 2.0193e-19]])\n"
      ]
     }
    ],
@@ -125,11 +125,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.8162, 0.3037, 0.1418],\n",
-      "        [0.5574, 0.4319, 0.6763],\n",
-      "        [0.6364, 0.0198, 0.4040],\n",
-      "        [0.8807, 0.0262, 0.9222],\n",
-      "        [0.1926, 0.7128, 0.0722]])\n"
+      "tensor([[0.7699, 0.8485, 0.6540],\n",
+      "        [0.5873, 0.3540, 0.4578],\n",
+      "        [0.1312, 0.6968, 0.8101],\n",
+      "        [0.4031, 0.0741, 0.4923],\n",
+      "        [0.3458, 0.6895, 0.6531]])\n"
      ]
     }
    ],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -233,11 +233,11 @@
       "        [1., 1., 1.],\n",
       "        [1., 1., 1.],\n",
       "        [1., 1., 1.]], dtype=torch.float64)\n",
-      "tensor([[-0.3894,  0.8121,  0.1133],\n",
-      "        [-1.0234,  1.2602,  0.0495],\n",
-      "        [ 0.8740, -0.0516,  1.1771],\n",
-      "        [ 0.1946, -1.2731, -1.3430],\n",
-      "        [-1.9996,  0.7545,  0.1674]])\n"
+      "tensor([[-0.2734, -0.5405, -1.3577],\n",
+      "        [ 0.1826, -0.8268, -0.4858],\n",
+      "        [ 1.2085,  0.0311, -1.0027],\n",
+      "        [ 0.3902, -1.5159, -1.1508],\n",
+      "        [ 0.4428,  1.2378, -0.4612]])\n"
      ]
     }
    ],
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -308,11 +308,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.3419,  1.6706,  0.7181],\n",
-      "        [-0.2609,  1.8406,  0.2035],\n",
-      "        [ 1.8448,  0.6925,  1.9858],\n",
-      "        [ 0.2960, -0.4729, -1.1085],\n",
-      "        [-1.6713,  1.1781,  1.0443]])\n"
+      "tensor([[ 0.1135, -0.4529, -0.4297],\n",
+      "        [ 1.0251,  0.1040, -0.2771],\n",
+      "        [ 2.0237,  0.9342, -0.4742],\n",
+      "        [ 0.8353, -0.7176, -0.2602],\n",
+      "        [ 1.4154,  2.0713,  0.2357]])\n"
      ]
     }
    ],
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -343,11 +343,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.3419,  1.6706,  0.7181],\n",
-      "        [-0.2609,  1.8406,  0.2035],\n",
-      "        [ 1.8448,  0.6925,  1.9858],\n",
-      "        [ 0.2960, -0.4729, -1.1085],\n",
-      "        [-1.6713,  1.1781,  1.0443]])\n"
+      "tensor([[ 0.1135, -0.4529, -0.4297],\n",
+      "        [ 1.0251,  0.1040, -0.2771],\n",
+      "        [ 2.0237,  0.9342, -0.4742],\n",
+      "        [ 0.8353, -0.7176, -0.2602],\n",
+      "        [ 1.4154,  2.0713,  0.2357]])\n"
      ]
     }
    ],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -377,11 +377,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.3419,  1.6706,  0.7181],\n",
-      "        [-0.2609,  1.8406,  0.2035],\n",
-      "        [ 1.8448,  0.6925,  1.9858],\n",
-      "        [ 0.2960, -0.4729, -1.1085],\n",
-      "        [-1.6713,  1.1781,  1.0443]])\n"
+      "tensor([[ 0.1135, -0.4529, -0.4297],\n",
+      "        [ 1.0251,  0.1040, -0.2771],\n",
+      "        [ 2.0237,  0.9342, -0.4742],\n",
+      "        [ 0.8353, -0.7176, -0.2602],\n",
+      "        [ 1.4154,  2.0713,  0.2357]])\n"
      ]
     }
    ],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -413,11 +413,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[ 0.3419,  1.6706,  0.7181],\n",
-      "        [-0.2609,  1.8406,  0.2035],\n",
-      "        [ 1.8448,  0.6925,  1.9858],\n",
-      "        [ 0.2960, -0.4729, -1.1085],\n",
-      "        [-1.6713,  1.1781,  1.0443]])\n"
+      "tensor([[ 0.1135, -0.4529, -0.4297],\n",
+      "        [ 1.0251,  0.1040, -0.2771],\n",
+      "        [ 2.0237,  0.9342, -0.4742],\n",
+      "        [ 0.8353, -0.7176, -0.2602],\n",
+      "        [ 1.4154,  2.0713,  0.2357]])\n"
      ]
     }
    ],
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -452,7 +452,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([ 0.8121,  1.2602, -0.0516, -1.2731,  0.7545])\n"
+      "tensor([-0.5405, -0.8268,  0.0311, -1.5159,  1.2378])\n"
      ]
     }
    ],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -516,8 +516,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([-0.2879])\n",
-      "-0.28788360953330994\n"
+      "tensor([0.7428])\n",
+      "0.7427762150764465\n"
      ]
     }
    ],
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -686,14 +686,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false,
     "jupyter": {
      "outputs_hidden": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.7428], device='cuda:0')\n",
+      "tensor([1.7428], dtype=torch.float64)\n"
+     ]
+    }
+   ],
    "source": [
     "# let us run this cell only if CUDA is available\n",
     "# We will use ``torch.device`` objects to move tensors in and out of GPU\n",
@@ -708,16 +717,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
